[CCAP-994] Support for deleteConfirmationScreen to be null/unset